// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`formatMessage formatMessage edge cases should handle formatMessage with empty object 1`] = `
"import { useIntl } from 'react-intl';
function MyComponent() {
    var intl = useIntl();
    return intl.formatMessage({});
}
"
`;

exports[`formatMessage formatMessage edge cases should handle formatMessage with missing defaultMessage 1`] = `
"import { useIntl } from 'react-intl';
function MyComponent() {
    var intl = useIntl();
    return intl.formatMessage({
        id: 'some.id'
    });
}
"
`;

exports[`formatMessage formatMessage edge cases should handle formatMessage with non-string defaultMessage 1`] = `
"import { useIntl } from 'react-intl';
function MyComponent() {
    var intl = useIntl();
    return intl.formatMessage({
        defaultMessage: 123,
        "id": "4263240168"
    });
}
"
`;

exports[`formatMessage formatMessage in different contexts should handle formatMessage in arrow function 1`] = `
"import { useIntl } from 'react-intl';
var MyComponent = function MyComponent() {
    var intl = useIntl();
    return intl.formatMessage({
        defaultMessage: 'Hello World',
        "id": "427197390"
    });
};
"
`;

exports[`formatMessage formatMessage in different contexts should handle formatMessage in callback 1`] = `
"import { jsx as _jsx } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
function MyComponent() {
    var intl = useIntl();
    var handleClick = function handleClick() {
        var message = intl.formatMessage({
            defaultMessage: 'Button clicked',
            "id": "221918764"
        });
        console.log(message);
    };
    return /*#__PURE__*/ _jsx("button", {
        onClick: handleClick,
        children: "Click me"
    });
}
"
`;

exports[`formatMessage formatMessage in different contexts should handle formatMessage in class method 1`] = `
"function _class_call_check(instance, Constructor) {
    if (!(instance instanceof Constructor)) {
        throw new TypeError("Cannot call a class as a function");
    }
}
function _defineProperties(target, props) {
    for(var i = 0; i < props.length; i++){
        var descriptor = props[i];
        descriptor.enumerable = descriptor.enumerable || false;
        descriptor.configurable = true;
        if ("value" in descriptor) descriptor.writable = true;
        Object.defineProperty(target, descriptor.key, descriptor);
    }
}
function _create_class(Constructor, protoProps, staticProps) {
    if (protoProps) _defineProperties(Constructor.prototype, protoProps);
    if (staticProps) _defineProperties(Constructor, staticProps);
    return Constructor;
}
import { injectIntl } from 'react-intl';
var MyComponent = /*#__PURE__*/ function() {
    "use strict";
    function MyComponent() {
        _class_call_check(this, MyComponent);
    }
    _create_class(MyComponent, [
        {
            key: "render",
            value: function render() {
                return this.props.intl.formatMessage({
                    defaultMessage: 'Hello World',
                    "id": "427197390"
                });
            }
        }
    ]);
    return MyComponent;
}();
export default injectIntl(MyComponent);
"
`;

exports[`formatMessage formatMessage with different patterns should handle formatMessage with computed properties 1`] = `
"import { useIntl } from 'react-intl';
function MyComponent() {
    var intl = useIntl();
    var messageObj = {
        defaultMessage: 'Hello World'
    };
    return intl.formatMessage({
        defaultMessage: 'Hello World',
        "id": "427197390"
    });
}
"
`;

exports[`formatMessage formatMessage with different patterns should handle formatMessage with dynamic defaultMessage 1`] = `
"import { useIntl } from 'react-intl';
function MyComponent(param) {
    var message = param.message;
    var intl = useIntl();
    return intl.formatMessage({
        defaultMessage: message,
        "id": "2668051809"
    });
}
"
`;

exports[`formatMessage formatMessage with different patterns should handle formatMessage with template literals 1`] = `
"import { useIntl } from 'react-intl';
function MyComponent(param) {
    var name = param.name;
    var intl = useIntl();
    return intl.formatMessage({
        defaultMessage: "Hello ".concat(name),
        "id": "376814653"
    });
}
"
`;

exports[`formatMessage formatMessage with useKey option should handle formatMessage with key when useKey is true 1`] = `
"import { useIntl } from 'react-intl';
function MyComponent() {
    var intl = useIntl();
    return intl.formatMessage({
        key: 'myKey',
        defaultMessage: 'Hello World',
        "id": "myKey"
    });
}
"
`;

exports[`formatMessage injectIntl formatMessage should add id to formatMessage calls 1`] = `
"import { injectIntl } from 'react-intl';
function MyComponent(param) {
    var intl = param.intl;
    return intl.formatMessage({
        defaultMessage: 'Hello World',
        "id": "427197390"
    });
}
export default injectIntl(MyComponent);
"
`;

exports[`formatMessage injectIntl formatMessage should add id to formatMessage calls with description 1`] = `
"import { injectIntl } from 'react-intl';
function MyComponent(param) {
    var intl = param.intl;
    return intl.formatMessage({
        defaultMessage: 'Hello World',
        description: 'A greeting message',
        "id": "427197390"
    });
}
export default injectIntl(MyComponent);
"
`;

exports[`formatMessage injectIntl formatMessage should add id to formatMessage calls with values 1`] = `
"import { injectIntl } from 'react-intl';
function MyComponent(param) {
    var intl = param.intl, name = param.name;
    return intl.formatMessage({
        defaultMessage: 'Hello {name}',
        values: {
            name: name
        },
        "id": "471047910"
    });
}
export default injectIntl(MyComponent);
"
`;

exports[`formatMessage injectIntl formatMessage should not add id to formatMessage calls that already have id 1`] = `
"import { injectIntl } from 'react-intl';
function MyComponent(param) {
    var intl = param.intl;
    return intl.formatMessage({
        id: 'existing.id',
        defaultMessage: 'Hello World'
    });
}
export default injectIntl(MyComponent);
"
`;

exports[`formatMessage useIntl formatMessage should add id to useIntl formatMessage calls 1`] = `
"import { useIntl } from 'react-intl';
function MyComponent() {
    var intl = useIntl();
    return intl.formatMessage({
        defaultMessage: 'Hello World',
        "id": "427197390"
    });
}
"
`;

exports[`formatMessage useIntl formatMessage should add id to useIntl formatMessage calls with values 1`] = `
"import { useIntl } from 'react-intl';
function MyComponent(param) {
    var name = param.name;
    var intl = useIntl();
    return intl.formatMessage({
        defaultMessage: 'Hello {name}',
        values: {
            name: name
        },
        "id": "471047910"
    });
}
"
`;

exports[`formatMessage useIntl formatMessage should handle multiple useIntl formatMessage calls 1`] = `
"import { jsxs as _jsxs } from "react/jsx-runtime";
import { useIntl } from 'react-intl';
function MyComponent() {
    var intl = useIntl();
    return /*#__PURE__*/ _jsxs("div", {
        children: [
            intl.formatMessage({
                defaultMessage: 'First message',
                "id": "340787992"
            }),
            intl.formatMessage({
                defaultMessage: 'Second message',
                "id": "151823759"
            })
        ]
    });
}
"
`;
